--- a/Project2/Auto/AutoWnd.axaml
+++ b/Project2/Auto/AutoWnd.axaml
@@ -8,8 +8,8 @@
     <DockPanel>
                 <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom">
                         <Button Name="AddAuto" Content="Добавить" Margin="5" Background="Bisque" Click="AddAuto_OnClick" ></Button>
-                        <Button Name="RedAutoz" Content="Редактировать" Margin="5" Background="Bisque" ></Button>
-                        <Button Name="DelAuto" Content="Удалить" Margin="5" Background="Bisque" ></Button>
+                        <Button Name="RedAutoz" Content="Редактировать" Margin="5" Background="Bisque" Click="RedAuto_OnClick"></Button>
+                        <Button Name="DelAuto" Content="Удалить" Margin="5" Background="Bisque" Click="DelAuto_OnClick" ></Button>
                         <Button Name ="Back" Content="Назад" Margin="5" Background="Bisque" Click="Back_OnClick"></Button>
                 </StackPanel>
                 <DataGrid Name="AutoGrid" x:CompileBindings="False" Margin="10">
