--- a/Project2/Zakaz/AddZakaz.axaml
+++ b/Project2/Zakaz/AddZakaz.axaml
@@ -2,19 +2,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:models="clr-namespace:Project2.Models"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Project2.Windows.AddZakaz"
         Title="Добавление">
         <StackPanel>
                 <TextBlock HorizontalAlignment="Center">Клиент</TextBlock>
-                <TextBox Name="ClientTextBox" Width="150"/>
-                <TextBlock HorizontalAlignment="Center">Авто</TextBlock>
-                <TextBox Name="AutoTextBox" Width="150"/>
+                <ComboBox Name="ClientComboBox" Width="150" HorizontalAlignment="Center" DisplayMemberBinding="{Binding FIO, DataType=models:Client}" SelectedValueBinding="{Binding ClientId, DataType=models:Client}"/>
+                <TextBlock HorizontalAlignment="Center" >Авто</TextBlock>
+                <ComboBox Name="AutoComboBox" Width="150" HorizontalAlignment="Center" DisplayMemberBinding="{Binding Marka, DataType=models:Auto}" SelectedValueBinding="{Binding AutoID, DataType=models:Auto}"/>
                 <TextBlock HorizontalAlignment="Center">Груз</TextBlock>
-                <TextBox Name="GruzTextBox" Width="150"/>
+                <ComboBox Name="GruzcomboBox" Width="150" HorizontalAlignment="Center" DisplayMemberBinding="{Binding Name, DataType=models:Tovar}" SelectedValueBinding="{Binding GruzID, DataType=models:Tovar}"/>
                 <TextBlock HorizontalAlignment="Center">Статус заявки</TextBlock>
-                <ComboBox Name="StatusTextBlock" Width="150" HorizontalAlignment="Center"/>
+                <ComboBox Name="StatusComboBox" Width="150" HorizontalAlignment="Center" DisplayMemberBinding="{Binding Name, DataType=models:Status}" SelectedValueBinding="{Binding StatusID, DataType=models:Status}"/>
                 <Button Content="Добавить заказ" HorizontalAlignment="Center" Margin="0 10 0 0" Click="AddBtnOnClick"  Background="Lavender"/>
-                <Button Content="На главную" HorizontalAlignment="Center" Margin="0 10 0 0" Click="BackOnClick" Background="Lavender"/>
+                <Button Content="На главную" Name = "BackBtn" HorizontalAlignment="Center" Margin="0 10 0 0" Click="BackOnClick" Background="Lavender"/>
         </StackPanel>
 </Window>
